# ssh-proxy-core

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README_EN.md  SECURITY.md  config.ini  go.mod  go.sum  plan.md
.github/workflows/: ci.yml
cmd/control-plane/: main.go
cmd/operator/: main.go
cmd/sshproxy/: cli_test.go  client.go  commands.go  completion.go  extra_test.go  list.go  login.go  main.go  output.go  playback.go  proxycommand.go  sshwrap.go
deploy/: ssh-proxy.service
docs/: DEPLOYMENT.md  DESIGN.md  TESTING.md  api-reference.md  config.example.ini  quickstart.md  webhook-event-schema.json
include/: account_lock.h  admin_runtime.h  audit_filter.h  audit_sign.h  auth_filter.h  channel_request_state.h  config.h  config_auth.h  filter.h  health_check.h  ip_acl_filter.h  ip_cidr.h  logger.h  metrics.h  mfa_filter.h  password_policy.h  policy_filter.h  proxy_handler.h  rate_limit_filter.h  rbac_filter.h  router.h  session.h  session_store.h  ssh_cert.h  ssh_proxy.h  ssh_server.h  version.h  webhook.h  webhook_runtime.h
scripts/: install-libssh.sh  setup-and-verify.sh
src/: #main.c#  account_lock.c  admin_runtime.c  audit_filter.c  audit_sign.c  auth_filter.c  channel_request_state.c  config.c  config_auth.c  filter.c  health_check.c  ip_acl_filter.c  ip_cidr.c  json_types.json-gen-c  ldap_auth.c  logger.c  main.c  metrics.c  mfa_filter.c  password_policy.c  policy_filter.c  proxy_handler.c  rate_limit_filter.c  rbac_filter.c  router.c  session.c  session_store.c  ssh_cert.c  ssh_proxy.c  ssh_server.c  webhook.c  webhook_runtime.c
tests/: test_account_lock.c  test_admin_runtime.c  test_audit_filter.c  test_audit_sign.c  test_auth_filter.c  test_channel_request_state.c  test_config.c  test_config_auth.c  test_filter.c  test_health_check.c  test_integration.c  test_ip_acl_filter.c  test_ldap_auth.c  test_logger.c  test_mfa_filter.c  test_password_policy.c  test_policy_filter.c  test_proxy_handler.c  test_router.c  test_session.c  test_session_store.c  test_ssh_proxy.c  test_ssh_proxy.cpp  test_ssh_server.c  test_utils.h  test_webhook.c  test_webhook_runtime.c
web/: embed.go
(+247 files in other folders)
